2010-10-04  Peter Rosin  <peda@lysator.liu.se>

	cwrapper: split long lines when dumping the wrapper script.
	* libltdl/config/ltmain.m4sh (func_emit_cwrapperexe_src): If
	the wrapper script contains long lines, split them for
	readability and to conform with C standards.
	* tests/cwrapper.at (cwrapper string length): New test, making
	sure we don't regress.

	msvc: handle symbols from different files independently.
	* libltdl/m4/libtool.m4 (_LT_CMD_GLOBAL_SYMBOLS)
	<dumpbin, lt_cv_sys_global_symbol_pipe>: Make all sections
	viable for symbol extraction again when the symbols from a new
	file starts.  Fixes tests/tagdemo-make.test for MSVC 10.
	* tests/dumpbin-symbols.at: New test, making sure we don't
	regress.
	* Makefile.am (TESTSUITE_AT): Update.

2010-09-27  Peter Rosin  <peda@lysator.liu.se>

	tests: check if sys_lib_search_path_spec works on MSVC.
	* tests/search-path.at (sys_lib_search_path on w32): New test,
	making sure v2.2.10-207-g09142ea doesn't regress.

	Skip need_lib_prefix.at on systems without lib prefix on libraries.
	* tests/need_lib_prefix.at [MSVC, OS/2]: Skip this test on
	systems that do not have libraries prefixed with lib.

	tests: clean up importing and exporting on w32.
	Makes the touched tests pass for MSVC when DLLs are built.
	* tests/demo/Makefile.am, tests/pdemo/Makefile.am: Define
	BUILDING_LIBHELLO when building libhello.la.
	* tests/demo/foo.h, tests/pdemo/foo.h (nothing) <MSVC>: Export
	variable when building the libhello dll and import when using
	libhello.  For GCC and non-w32, and when building a static
	libhello, leave as an ordinary extern.
	* tests/pdemo/foo.h [Cygwin]: Remove unneeded and "dead" export
	and import logic (LIBFOO_DLL is always undefined).
	* tests/pdemo/longer_file_name_foo.c,
	tests/pdemo/longer_file_name_foo2.c (_LIBFOO_COMPILATION_): Not
	useful before, even less so now.  Removed.
	* tests/depdemo/l1/Makefile.am: Define BUILDING_LIBL1 when
	building libl1.la.