@@ -1,3 +1,9 @@
+2010-10-07  Roumen Petrov  <bugtrack@roumenpetrov.info>
+
+	Add test case for 69e77671 (cwrapper PATH manipulation order)
+	* tests/cwrapper.at: Add new test 'cwrapper and installed shared
+	libraries.'
+
 2010-10-04  Peter Rosin  <peda@lysator.liu.se>
 
 	cwrapper: split long lines when dumping the wrapper script.
